[Australis] Bug 979501: update overflow chevron in RTL mode. r=Gijs
UltraBlame original commit: d6c7dd429f69aded7433f57e61c65a1f0dccaee4

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -8300,6 +8300,39 @@ rect
 ;
 }
 #
+nav
+-
+bar
+-
+overflow
+-
+button
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+>
+.
+toolbarbutton
+-
+icon
+{
+transform
+:
+scaleX
+(
+-
+1
+)
+;
+}
+#
 tabview
 -
 button
