--- a/browser/themes/shared/toolbarbuttons.inc.css
+++ b/browser/themes/shared/toolbarbuttons.inc.css
@@ -1087,6 +1087,39 @@ rect
 ;
 }
 #
+nav
+-
+bar
+-
+overflow
+-
+button
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+>
+.
+toolbarbutton
+-
+icon
+{
+transform
+:
+scaleX
+(
+-
+1
+)
+;
+}
+#
 tabview
 -
 button
